<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ICL</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Validate">Validate</string>
    <string name="Publish">Publish</string>
    <string name="book">Book</string>
    <string name="chapter">Chapter</string>
    <string name="startVerse">Start Verse</string>
    <string name="endVerse">End Verse</string>
    <string name="endpoint">ICL Promises URL</string>
    <string name="saveSettings">Save Settings</string>
    <string name="port">Port</string>
    <string name="usePort">Use Port</string>

</resources>